解决插件对新版本BurpSuite无法发送识别码问题，升级jdk为8，调用jdk8内的base64包